--- a/css/main.css
+++ b/css/main.css
@@ -9,12 +9,45 @@
     font-style: normal;
 }
 
+html, body{
+  margin: 0;
+  width: 100%;
+  height: 100%; 
+}
+
 body{
   background: #444;
+  background: linear-gradient(to bottom, #444 0%, #4F4F4F 100%);
   font-family: "Press Start 2P";
   direction: ltr;
-  width:100%;
-  height:100%;
+  overflow: hidden;
+  
+}
+
+.bg{
+  position: absolute;  
+
+  bottom: -50px;
+  left: 0;
+  width: 100%;
+  height: 170px;
+  background-image: url('../assets/images/img_headerbanner.png');
+  background-repeat: no-repeat;
+  background-position: center; 
+}
+.bg::before, .bg::after{
+  content: '';
+  background: #464646;
+  position: absolute;
+  bottom : -55px;  
+  width: 50%;
+  height: 170px;
+}
+.bg::before{
+  left: -375px;
+}
+.bg::after{
+  right: -375px;
 }
 
 
@@ -22,6 +55,7 @@ body{
   position: absolute;
   width: 500px;
   height: 800px;
+
   left: 50%;
   top: 50%;
   margin-left: -250px;
@@ -85,10 +119,10 @@ body{
 
 .marquee_1{
   color: #707070;  
-  width: 186px;
+  width: 181px;
   bottom: 38px;
   position: absolute;
-  left: 52px;
+  left: 56px;
   height: 54px;
   line-height: 54px;
   transform: rotateY(-33deg);
@@ -96,7 +130,7 @@ body{
 
 .marquee_2{  
   color: #707070;  
-  width: 186px;
+  width: 181px;
   bottom: 38px;
   position: absolute;
   left: 207px;
